tests/ui/hygiene/trait_items.stderr
error[E0599]: no method named `f` found for unit type `()` in the current scope
  --> $DIR/trait_items.rs:17:24
   |
LL |         fn f(&self) {}
   |            - the method is available for `()` here
...
LL |     fn f() { ::baz::m!(); }
   |              ----------- in this macro invocation
...
LL |     pub macro m() { ().f() }
   |     -------------------^----
   |     |                  |
   |     |                  method not found in `()`
   |     in this expansion of `::baz::m!`
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
LL +     use foo::T;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
